Add Message to RStudio Lesson

--- a/lesson3.html
+++ b/lesson3.html
@@ -125,6 +125,15 @@ $(document).ready(function () {
 <h2>RStudio</h2>
 <p>RStudio provides a very nice front-end IDE for R. As it continues to develop, more and more capabilities are added. Version control with <code>svn</code> or <code>git</code> has been available for quite some time. You may have even seen the git tab in RStudio and wondered what it was doing there. I use both the command line and RStudio for my git work, so it’s a good idea to have a feel for both. I prefer the command line interface for some things, but being a visual person, RStudio’s git support has a lot to offer. IN particular, it’s quite easy to write a good commit message, and to visually see the diffs/changes that you are making.</p>
 <p>You will have seen how we did this in the Lecture - now it’s your turn. Make some changes to a file, add and commit them. Also, add a new script, and note the difference in the buttons in the git tab in RStudio - i.e. when do you see an A in the button vs. an M? What are the command line analogs?</p>
+<p>Since you have the data, and shells of scripts, spend some time making a mini-analysis (very mini!). Try to get this together:</p>
+<ol style="list-style-type: decimal">
+<li>read in the data</li>
+<li>save it (in <code>results</code>) to an rdata file</li>
+<li>plot the data</li>
+<li>run a regression between counts and depth or sst</li>
+<li>put these scripts in a controller script</li>
+</ol>
+<p>And use version control for it all.</p>
 </div>
 <div id="git-diff" class="section level2">
 <h2>Git Diff</h2>
