Make Note of Script in Data Folder

--- a/lesson3.html
+++ b/lesson3.html
@@ -146,6 +146,7 @@ $(document).ready(function () {
 <li>put these scripts in a controller script, e.g. <code>source(readData.R)</code>, <code>source(plotData.R)</code> etc.</li>
 </ol>
 <p>And use version control for it all.</p>
+<p>n.b. if you are feeling lacking for coding inspiration, look in the data folder for a file called <code>prepareDUMLData.R</code> which has all the components of the analysis.</p>
 </div>
 </div>
 <div id="part-2" class="section level1">
